--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 :root {
-    --primary: #9dbdc6;
+    --primary: #33d9b2;
     --secondary: #daeaef;
     --tertiary: #ff3d2e;
     --light: #ffffff;
