--- a/assets/style.css
+++ b/assets/style.css
@@ -717,9 +717,9 @@
   }
   
   /* BACKGROUND UTILS */
-  .bg-primary {
+  /* .bg-primary {
     background-color: var(--primary);
-  }
+  } */
   
   .bg-secondary {
     background-color: var(--secondary);
