--- a/assets/style.css
+++ b/assets/style.css
@@ -748,6 +748,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    border-radius: var(--border-radius);
   }
   
   .justify-space-between {
