--- a/assets/style.css
+++ b/assets/style.css
@@ -318,9 +318,9 @@
     margin-top: var(--spacing-five);
   }
   
-  .mt-auto {
+  /* .mt-auto {
     margin-top: auto;
-  }
+  } */
   
   /* Margin-right */
   
